<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lab2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_product"
            app:destination="@id/navigation_product" />
        <argument
            android:name="productTitle" />
        <argument
            android:name="productDescription" />
        <argument
            android:name="productImage" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_registration"
            app:destination="@id/navigation_registration" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.lab2.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_product"
            app:destination="@id/navigation_product" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.lab2.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_navigation_favorites_to_navigation_webView"
            app:destination="@id/navigation_webView" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.lab2.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.lab2.ui.product_page.ProductFragment"
        android:label="@string/product_page"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_navigation_product_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_webView"
        android:name="com.example.lab2.ui.web_view.WebFragment"
        android:label="WebView"
        tools:layout="@layout/fragment_web" >
        <action
            android:id="@+id/action_navigation_webView_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
    </fragment>

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.example.lab2.ui.registration.RegistrationFragment"
        android:label="Registration"
        tools:layout="@layout/fragment_registration" >

        <action
            android:id="@+id/action_navigation_registration_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>